test/corpus/jetbrains/annotations.txt
==================
annotations
==================

@a public class Annotations private @a constructor(private @property:a @param:a val c1: Int, @property:a @param:a val c2: Int) {
    @a() val hasValueArguments = 42

    protected @a fun f() {
    }

    inline fun <reified @a T, @a F> inlineFun() { }

    private fun annotationWithVararg(@a vararg i: Int) {}

    @b(E.E1) private val c: Int = 1

    @a @b(E.E2) public fun g(@a p1: E) {
    }

    var withCustomAccessors: Int = 0
    //TODO: accessor modifiers are lost
        @a get
        @a private set


    private @b(E.E2) companion object {
        @f val field = 42
    }

    class Nested @a private @b(E.E1) @b(E.E2) constructor()

    enum class En { Entry1, @a @b(E.E2) Entry2, @a @c Entry3 }

    fun types(param: @a @b(E.E1) LongRange): @a @b(E.E2) Unit {}

    fun @receiver:a Int.foo() {}
    val @receiver:a Int.receiverField: String? get() = null

    @get: a
    val getterField : String? = null

    @set: a
    var setterField : String? = null

    @field: a
    val ownField : String? = null

    @setparam:a
    var setParam: String? = null

    @delegate:a
    val deleage by lazy { 12 }

    class ClassWithConstructor(@param: a val b: Int)
}

@Target(AnnotationTarget.PROPERTY, AnnotationTarget.VALUE_PARAMETER, AnnotationTarget.FUNCTION,
        AnnotationTarget.CONSTRUCTOR, AnnotationTarget.PROPERTY_GETTER, AnnotationTarget.PROPERTY_SETTER,
        AnnotationTarget.TYPE, AnnotationTarget.CLASS, AnnotationTarget.TYPE_PARAMETER, AnnotationTarget.FIELD)
annotation class a

@Target(AnnotationTarget.PROPERTY, AnnotationTarget.FUNCTION, AnnotationTarget.CLASS,
        AnnotationTarget.CONSTRUCTOR, AnnotationTarget.TYPE)
@Retention(AnnotationRetention.SOURCE)
@Repeatable
annotation class b(val e: E)

@Target(AnnotationTarget.PROPERTY, AnnotationTarget.VALUE_PARAMETER, AnnotationTarget.FUNCTION,
        AnnotationTarget.CONSTRUCTOR, AnnotationTarget.PROPERTY_GETTER, AnnotationTarget.PROPERTY_SETTER,
        AnnotationTarget.TYPE, AnnotationTarget.CLASS)
annotation class c

@Target(AnnotationTarget.FIELD)
annotation class f

enum class E { E1, E2 }

---

(source_file
  (class_declaration
    (modifiers
      (annotation
        (user_type
          (type_identifier)))
      (visibility_modifier))
    name: (type_identifier)
    constructor: (primary_constructor
      (modifiers
        (visibility_modifier)
        (annotation
          (user_type
            (type_identifier))))
      (class_parameter
        (modifiers
          (visibility_modifier)
          (annotation
            (use_site_target)
            (user_type
              (type_identifier)))
          (annotation
            (use_site_target)
            (user_type
              (type_identifier))))
        (binding_pattern_kind)
        name: (simple_identifier)
        parameter_type: (user_type
          (type_identifier)))
      (class_parameter
        (modifiers
          (annotation
            (use_site_target)
            (user_type
              (type_identifier)))
          (annotation
            (use_site_target)
            (user_type
              (type_identifier))))
        (binding_pattern_kind)
        name: (simple_identifier)
        parameter_type: (user_type
          (type_identifier))))
    body: (class_body
      (property_declaration
        (modifiers
          (annotation
            (constructor_invocation
              type: (user_type
                (type_identifier))
              arguments: (value_arguments))))
        (binding_pattern_kind)
        variable: (variable_declaration
          name: (simple_identifier))
        initializer: (integer_literal))
      (function_declaration
        (modifiers
          (visibility_modifier)
          (annotation
            (user_type
              (type_identifier))))
        name: (simple_identifier)
        parameters: (function_value_parameters)
        body: (function_body))
      (function_declaration
        (modifiers
          (function_modifier))
        type_parameters: (type_parameters
          (type_parameter
            (type_parameter_modifiers
              (reification_modifier)
              (annotation
                (user_type
                  (type_identifier))))
            name: (type_identifier))
          (type_parameter
            (type_parameter_modifiers
              (annotation
                (user_type
                  (type_identifier))))
            name: (type_identifier)))
        name: (simple_identifier)
        parameters: (function_value_parameters)
        body: (function_body))
      (function_declaration
        (modifiers
          (visibility_modifier))
        name: (simple_identifier)
        parameters: (function_value_parameters
          (parameter_modifiers
            (annotation
              (user_type
                (type_identifier)))
            (parameter_modifier))
          (parameter
            name: (simple_identifier)
            type: (user_type
              (type_identifier))))
        body: (function_body))
      (property_declaration
        (modifiers
          (annotation
            (constructor_invocation
              type: (user_type
                (type_identifier))
              arguments: (value_arguments
                (value_argument
                  value: (navigation_expression
                    receiver: (simple_identifier)
                    (navigation_suffix
                      (simple_identifier)))))))
          (visibility_modifier))
        (binding_pattern_kind)
        variable: (variable_declaration
          name: (simple_identifier)
          declared_type: (user_type
            (type_identifier)))
        initializer: (integer_literal))
      (function_declaration
        (modifiers
          (annotation
            (user_type
              (type_identifier)))
          (annotation
            (constructor_invocation
              type: (user_type
                (type_identifier))
              arguments: (value_arguments
                (value_argument
                  value: (navigation_expression
                    receiver: (simple_identifier)
                    (navigation_suffix
                      (simple_identifier)))))))
          (visibility_modifier))
        name: (simple_identifier)
        parameters: (function_value_parameters
          (parameter_modifiers
            (annotation
              (user_type
                (type_identifier))))
          (parameter
            name: (simple_identifier)
            type: (user_type
              (type_identifier))))
        body: (function_body))
      (property_declaration
        (binding_pattern_kind)
        variable: (variable_declaration
          name: (simple_identifier)
          declared_type: (user_type
            (type_identifier)))
        initializer: (integer_literal))
      (line_comment)
      (getter
        (modifiers
          (annotation
            (user_type
              (type_identifier)))))
      (setter
        (modifiers
          (annotation
            (user_type
              (type_identifier)))
          (visibility_modifier)))
      (companion_object
        (modifiers
          (visibility_modifier)
          (annotation
            (constructor_invocation
              type: (user_type
                (type_identifier))
              arguments: (value_arguments
                (value_argument
                  value: (navigation_expression
                    receiver: (simple_identifier)
                    (navigation_suffix
                      (simple_identifier))))))))
        body: (class_body
          (property_declaration
            (modifiers
              (annotation
                (user_type
                  (type_identifier))))
            (binding_pattern_kind)
            variable: (variable_declaration
              name: (simple_identifier))
            initializer: (integer_literal))))
      (class_declaration
        name: (type_identifier)
        constructor: (primary_constructor
          (modifiers
            (annotation
              (user_type
                (type_identifier)))
            (visibility_modifier)
            (annotation
              (constructor_invocation
                type: (user_type
                  (type_identifier))
                arguments: (value_arguments
                  (value_argument
                    value: (navigation_expression
                      receiver: (simple_identifier)
                      (navigation_suffix
                        (simple_identifier)))))))
            (annotation
              (constructor_invocation
                type: (user_type
                  (type_identifier))
                arguments: (value_arguments
                  (value_argument
                    value: (navigation_expression
                      receiver: (simple_identifier)
                      (navigation_suffix
                        (simple_identifier))))))))))
      (class_declaration
        name: (type_identifier)
        body: (enum_class_body
          (enum_entry
            name: (simple_identifier))
          (enum_entry
            (modifiers
              (annotation
                (user_type
                  (type_identifier)))
              (annotation
                (constructor_invocation
                  type: (user_type
                    (type_identifier))
                  arguments: (value_arguments
                    (value_argument
                      value: (navigation_expression
                        receiver: (simple_identifier)
                        (navigation_suffix
                          (simple_identifier))))))))
            name: (simple_identifier))
          (enum_entry
            (modifiers
              (annotation
                (user_type
                  (type_identifier)))
              (annotation
                (user_type
                  (type_identifier))))
            name: (simple_identifier))))
      (function_declaration
        name: (simple_identifier)
        parameters: (function_value_parameters
          (parameter
            name: (simple_identifier)
            type: (type_modifiers
              (annotation
                (user_type
                  (type_identifier)))
              (annotation
                (constructor_invocation
                  type: (user_type
                    (type_identifier))
                  arguments: (value_arguments
                    (value_argument
                      value: (navigation_expression
                        receiver: (simple_identifier)
                        (navigation_suffix
                          (simple_identifier))))))))
            type: (user_type
              (type_identifier))))
        return_type: (type_modifiers
          (annotation
            (user_type
              (type_identifier)))
          (annotation
            (constructor_invocation
              type: (user_type
                (type_identifier))
              arguments: (value_arguments
                (value_argument
                  value: (navigation_expression
                    receiver: (simple_identifier)
                    (navigation_suffix
                      (simple_identifier))))))))
        return_type: (user_type
          (type_identifier))
        body: (function_body))
      (function_declaration
        receiver: (receiver_type
          (type_modifiers
            (annotation
              (use_site_target)
              (user_type
                (type_identifier))))
          (user_type
            (type_identifier)))
        name: (simple_identifier)
        parameters: (function_value_parameters)
        body: (function_body))
      (property_declaration
        (binding_pattern_kind)
        receiver: (receiver_type
          (type_modifiers
            (annotation
              (use_site_target)
              (user_type
                (type_identifier))))
          (user_type
            (type_identifier)))
        variable: (variable_declaration
          name: (simple_identifier)
          declared_type: (nullable_type
            (user_type
              (type_identifier))
            (quest)))
        getter: (getter
          body: (function_body
            (null_literal))))
      (property_declaration
        (modifiers
          (annotation
            (use_site_target)
            (user_type
              (type_identifier))))
        (binding_pattern_kind)
        variable: (variable_declaration
          name: (simple_identifier)
          declared_type: (nullable_type
            (user_type
              (type_identifier))
            (quest)))
        initializer: (null_literal))
      (property_declaration
        (modifiers
          (annotation
            (use_site_target)
            (user_type
              (type_identifier))))
        (binding_pattern_kind)
        variable: (variable_declaration
          name: (simple_identifier)
          declared_type: (nullable_type
            (user_type
              (type_identifier))
            (quest)))
        initializer: (null_literal))
      (property_declaration
        (modifiers
          (annotation
            (use_site_target)
            (user_type
              (type_identifier))))
        (binding_pattern_kind)
        variable: (variable_declaration
          name: (simple_identifier)
          declared_type: (nullable_type
            (user_type
              (type_identifier))
            (quest)))
        initializer: (null_literal))
      (property_declaration
        (modifiers
          (annotation
            (use_site_target)
            (user_type
              (type_identifier))))
        (binding_pattern_kind)
        variable: (variable_declaration
          name: (simple_identifier)
          declared_type: (nullable_type
            (user_type
              (type_identifier))
            (quest)))
        initializer: (null_literal))
      (property_declaration
        (modifiers
          (annotation
            (use_site_target)
            (user_type
              (type_identifier))))
        (binding_pattern_kind)
        variable: (variable_declaration
          name: (simple_identifier))
        delegate: (property_delegate
          (call_expression
            callee: (simple_identifier)
            (call_suffix
              (annotated_lambda
                (lambda_literal
                  body: (statements
                    (integer_literal))))))))
      (class_declaration
        name: (type_identifier)
        constructor: (primary_constructor
          (class_parameter
            (modifiers
              (annotation
                (use_site_target)
                (user_type
                  (type_identifier))))
            (binding_pattern_kind)
            name: (simple_identifier)
            parameter_type: (user_type
              (type_identifier)))))))
  (class_declaration
    (modifiers
      (annotation
        (constructor_invocation
          type: (user_type
            (type_identifier))
          arguments: (value_arguments
            (value_argument
              value: (navigation_expression
                receiver: (simple_identifier)
                (navigation_suffix
                  (simple_identifier))))
            (value_argument
              value: (navigation_expression
                receiver: (simple_identifier)
                (navigation_suffix
                  (simple_identifier))))
            (value_argument
              value: (navigation_expression
                receiver: (simple_identifier)
                (navigation_suffix
                  (simple_identifier))))
            (value_argument
              value: (navigation_expression
                receiver: (simple_identifier)
                (navigation_suffix
                  (simple_identifier))))
            (value_argument
              value: (navigation_expression
                receiver: (simple_identifier)
                (navigation_suffix
                  (simple_identifier))))
            (value_argument
              value: (navigation_expression
                receiver: (simple_identifier)
                (navigation_suffix
                  (simple_identifier))))
            (value_argument
              value: (navigation_expression
                receiver: (simple_identifier)
                (navigation_suffix
                  (simple_identifier))))
            (value_argument
              value: (navigation_expression
                receiver: (simple_identifier)
                (navigation_suffix
                  (simple_identifier))))
            (value_argument
              value: (navigation_expression
                receiver: (simple_identifier)
                (navigation_suffix
                  (simple_identifier))))
            (value_argument
              value: (navigation_expression
                receiver: (simple_identifier)
                (navigation_suffix
                  (simple_identifier)))))))
      (class_modifier))
    name: (type_identifier))
  (class_declaration
    (modifiers
      (annotation
        (constructor_invocation
          type: (user_type
            (type_identifier))
          arguments: (value_arguments
            (value_argument
              value: (navigation_expression
                receiver: (simple_identifier)
                (navigation_suffix
                  (simple_identifier))))
            (value_argument
              value: (navigation_expression
                receiver: (simple_identifier)
                (navigation_suffix
                  (simple_identifier))))
            (value_argument
              value: (navigation_expression
                receiver: (simple_identifier)
                (navigation_suffix
                  (simple_identifier))))
            (value_argument
              value: (navigation_expression
                receiver: (simple_identifier)
                (navigation_suffix
                  (simple_identifier))))
            (value_argument
              value: (navigation_expression
                receiver: (simple_identifier)
                (navigation_suffix
                  (simple_identifier)))))))
      (annotation
        (constructor_invocation
          type: (user_type
            (type_identifier))
          arguments: (value_arguments
            (value_argument
              value: (navigation_expression
                receiver: (simple_identifier)
                (navigation_suffix
                  (simple_identifier)))))))
      (annotation
        (user_type
          (type_identifier)))
      (class_modifier))
    name: (type_identifier)
    constructor: (primary_constructor
      (class_parameter
        (binding_pattern_kind)
        name: (simple_identifier)
        parameter_type: (user_type
          (type_identifier)))))
  (class_declaration
    (modifiers
      (annotation
        (constructor_invocation
          type: (user_type
            (type_identifier))
          arguments: (value_arguments
            (value_argument
              value: (navigation_expression
                receiver: (simple_identifier)
                (navigation_suffix
                  (simple_identifier))))
            (value_argument
              value: (navigation_expression
                receiver: (simple_identifier)
                (navigation_suffix
                  (simple_identifier))))
            (value_argument
              value: (navigation_expression
                receiver: (simple_identifier)
                (navigation_suffix
                  (simple_identifier))))
            (value_argument
              value: (navigation_expression
                receiver: (simple_identifier)
                (navigation_suffix
                  (simple_identifier))))
            (value_argument
              value: (navigation_expression
                receiver: (simple_identifier)
                (navigation_suffix
                  (simple_identifier))))
            (value_argument
              value: (navigation_expression
                receiver: (simple_identifier)
                (navigation_suffix
                  (simple_identifier))))
            (value_argument
              value: (navigation_expression
                receiver: (simple_identifier)
                (navigation_suffix
                  (simple_identifier))))
            (value_argument
              value: (navigation_expression
                receiver: (simple_identifier)
                (navigation_suffix
                  (simple_identifier)))))))
      (class_modifier))
    name: (type_identifier))
  (class_declaration
    (modifiers
      (annotation
        (constructor_invocation
          type: (user_type
            (type_identifier))
          arguments: (value_arguments
            (value_argument
              value: (navigation_expression
                receiver: (simple_identifier)
                (navigation_suffix
                  (simple_identifier)))))))
      (class_modifier))
    name: (type_identifier))
  (class_declaration
    name: (type_identifier)
    body: (enum_class_body
      (enum_entry
        name: (simple_identifier))
      (enum_entry
        name: (simple_identifier)))))
